# zmf-cli

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
data/: build.yml  environment.yml
src/zmfcli/: __init__.py  logrequests.py  session.py  zmf.py
tests/: environment.yml  test_helpers.py  test_zmf.py
zmf-cli/: zmf.py
zmfcli/: __init__.py
