# https://github.com/pypa/setuptools/issues/1724
[metadata]
name = zmf-cli
#version = attr: zmfcli.__version__
author = Michael Kressibucher
author_email = michael.kressibucher@gmail.com
description = Command line wrapper for ChangeMan ZMF Rest API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://github.com/kressi/zmf-cli
license_files = LICENSE

[options]
packages = find:
install_requires =
    fire
    requests
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zmf = zmfcli.zmf:main

[options.extras_require]
tests =
    pytest
    pytest-cov
    requests-mock
    coveralls

[tool.setuptools_scm]
